Refatorando codigo do Docker