@@ -2,18 +2,19 @@ FROM openjdk:26-ea-jdk-bookworm AS build
 
 WORKDIR /app
 
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends maven \
-    && rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update && apt-get install -y maven && rm -rf /var/lib/apt/lists/*
 
 COPY pom.xml .
-RUN mvn -B -ntp dependency:go-offline
+
+RUN mvn dependency:go-offline
+
 COPY src ./src
-RUN mvn -B -ntp clean package -DskipTests
+
+RUN mvn clean package -DskipTests
 
 FROM openjdk:26-ea-jdk-slim
-
 WORKDIR /app
 COPY --from=build /app/target/*.jar application.jar
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "application.jar"]
+
+ENTRYPOINT ["java", "--enable-preview", "-jar", "application.jar"]
